--- a/views/contact.gohtml
+++ b/views/contact.gohtml
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Get in touch!</h1>
-    <p>
-        To get in touch, please send an email to <a href="mailto:support@bizzytrack">support@bizzytrack.com</a>
-    </p>
-
-    
-</body>
-</html>
+ <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <h1>Get in touch!</h1>
+        <p>
+            To get in touch, please send an email to <a href="mailto:support@bizzytrack">support@bizzytrack.com</a>
+        </p>
+        {{template "footer"}} 
+        
+    </body>
+    </html>
