--- a/views/signup.gohtml
+++ b/views/signup.gohtml
@@ -1,4 +1,23 @@
 {{define "yield"}}
+<div class="row">
+    <div class="col-md-4">          
+    </div>
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-header bg-primary text-white">
+                <h5 class="card-title">Sign Up Now!</h5>
+            </div>
+            <div class="card-body">
+                {{template "signupForm"}}
+            </div>
+        </div>
+            
+    </div>
+</div>
+{{end}}
+
+
+{{define "signupForm"}}
 <form>
   <div class="form-group">
     <label for="email">Email address</label>
