--- a/views/layouts/navbar.gohtml
+++ b/views/layouts/navbar.gohtml
@@ -14,6 +14,9 @@
             <a class="nav-link" href="/contact">Contact</a>
           </li>
         </ul>
+        <form class="d-flex">
+          <a href="/signup">Sign Up</a>    
+        </form>
       </div>
     </div>
   </nav>
