--- a/views/users/new.gohtml
+++ b/views/users/new.gohtml
@@ -18,7 +18,7 @@
 
 
 {{define "signupForm"}}
-<form>
+<form action="/signup" method="POST">
   <div class="form-group">
     <label for="email">Email address</label>
     <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
